tests/miz/pass/clusters/pass_clusters_independent_rules_001.miz
registration
  cluster empty -> finite for set;
  cluster singleton -> finite for set;
end;
