tests/miz/fail/types/fail_type_elaboration_local_structure_reserve_evidence_gap_001.miz
definition
  struct LocalStruct where
    field carrier -> set;
  end;
end;

reserve s for LocalStruct;
